force-app/main/default/objects/Apttus_Config2__Milestone2__c/Apttus_Config2__Milestone2__c.object-meta.xml
<CustomObject>
    <description>Represents milestones associated with other business objects</description>
    <label>Milestone</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>