force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__ActualDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ActualDate__c</fullName>
    <description>The milestone completed date</description>
    <inlineHelpText>The milestone completed date</inlineHelpText>
    <label>Actual Date</label>
    <type>Date</type>
</CustomField>