force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__Category__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Category__c</fullName>
    <description>The milestone category.</description>
    <inlineHelpText>The milestone category.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>