force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__Comments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Comments__c</fullName>
    <description>The milestone comments</description>
    <inlineHelpText>The milestone comments</inlineHelpText>
    <label>Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>