force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__CompletedByUserId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CompletedByUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the user who completed the milestone</description>
    <inlineHelpText>ID of the user who completed the milestone</inlineHelpText>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>