force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__CompletedOnDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CompletedOnDate__c</fullName>
    <description>The date the milestone was completed</description>
    <inlineHelpText>The date the milestone was completed</inlineHelpText>
    <label>Completed On</label>
    <type>Date</type>
</CustomField>