force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__ContextEntityId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContextEntityId__c</fullName>
    <description>The ID of the context entity</description>
    <externalId>true</externalId>
    <inlineHelpText>The ID of the context entity</inlineHelpText>
    <label>Context Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>