force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__ContextEntityType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContextEntityType__c</fullName>
    <description>The context entity type</description>
    <inlineHelpText>The context entity type</inlineHelpText>
    <label>Context Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>