force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__DeductionAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DeductionAmount__c</fullName>
    <description>The amount that may be deducted from payments for partially completed milestones</description>
    <inlineHelpText>The amount that may be deducted from payments for partially completed milestones</inlineHelpText>
    <label>Deduction Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>