force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Description__c</fullName>
    <description>The milestone description</description>
    <inlineHelpText>The milestone description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>