force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__ExpectedDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpectedDate__c</fullName>
    <description>The milestone expected date</description>
    <inlineHelpText>The milestone expected date</inlineHelpText>
    <label>Expected Date</label>
    <type>Date</type>
</CustomField>