force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__MaxBenefitAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxBenefitAmount__c</fullName>
    <description>The maximum benefit amount</description>
    <inlineHelpText>The maximum benefit amount</inlineHelpText>
    <label>Max Benefit Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>