force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PercentComplete__c</fullName>
    <description>Indicates the percent completion for partially completed milestones</description>
    <inlineHelpText>Indicates the percent completion for partially completed milestones</inlineHelpText>
    <label>% Complete</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>