force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Status__c</fullName>
    <description>The milestone status</description>
    <inlineHelpText>The milestone status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expected</fullName>
                <default>true</default>
                <label>Expected</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>