force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated milestone template</description>
    <inlineHelpText>ID of the associated milestone template</inlineHelpText>
    <label>Template</label>
    <referenceTo>Apttus_Config2__MilestoneTemplate__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>