force-app/main/default/objects/Apttus_Config2__Milestone2__c/fields/Apttus_Config2__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Type__c</fullName>
    <description>The milestone type</description>
    <inlineHelpText>The milestone type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Milestone</fullName>
                <default>true</default>
                <label>Milestone</label>
            </value>
            <value>
                <fullName>Deliverable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>